update letter spacing and fix header style

--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@
 @import '../css/typesetting-article.css';
 
 @theme {
+  --x-tracking-tight: -.015em;
 }
 
 @utility nextra-focus {
